[Fix(temp)] remove page margin on mobile

--- a/src/pages/NetflixPages/Netflix/Netflix.style.css
+++ b/src/pages/NetflixPages/Netflix/Netflix.style.css
@@ -1,4 +1,6 @@
 #netflix {
   height: 100%;
   background-color: rgba(var(--bs-dark-rgb));
+  color: white;
+  overflow-x: hidden;
 }
